XXXX-XX-XX:

	General improvements and optimizations:

	php : Optimized haxe.ds.Vector (VectorData is not Array anymore)
	php : Optimized `Map.copy()` and `Array.copy()`
	php : Support native PHP generators. See `php.Syntax.yield()` and `php.Generator`

	Bugfixes:

	php : Escape `$` in field names of anonymous objects (#7230)

2018-06-12: 4.0.0-preview.4

	New features:

	all : added JSON-RPC-based display protocol
	all : allow `enum abstract` syntax instead of `@:enum abstract` (#4282)
	all : allow `extern` on fields instead of `@:extern`
	all : support signature completion on incomplete structures (#5767)
	all : support auto-numbering and auto-stringification in enum abstracts (#7139)
	all : support `Type1 & Type2` intersection syntax for type parameter constraints and structures (#7127)

	General improvements and optimizations:

	all : reworked CLI usage/help output (#6862)
	all : implemented `for` loop unrolling (#3784)
	all : metadata can now use `.`, e.g. `@:a.b`. This is represented as a string (#3959)
	all : [breaking] disallow static extensions on implicit `this` (#6036)
	all : allow true and false expressions as type parameters (#6958)
	all : improved display support in many areas
	all : support `override |` completion
	all : make display/references and display/toplevel actually work sometimes
	all : allow `var ?x` and `final ?x` parsing in structures (#6947)
	all : improved overall robustness of the parser in display mode
	all : allow `@:commutative` on non-static abstract functions (#5599)
	js : added externs for js.Date (#6855)
	js : respect `-D source-map` flag to generate source maps in release builds
	js : enums are now generated as objects instead of arrays (#6350)
	eval : improved debugger, support conditional breakpoints

	Removals:

	all : moved haxe.remoting to hx3compat
	js : moved js.XMLSocket to hx3compat
	neko : moved neko.net to hx3compat
	all : removed support for `T:(A, B)` constraint syntax

	Bugfixes:
